--- a/app/assets/stylesheets/main/bottom/audio_player.css
+++ b/app/assets/stylesheets/main/bottom/audio_player.css
@@ -11,14 +11,17 @@
 }
 
 .audio-display{
-  width: 60%;
-  height: 40%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px;
-  margin-top: 3.8%;
+  /* width: 60%; */
+/* height: 40%; */
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+align-items: center;
+/*padding: 10px;*/
+margin-top: 3.8%;
+/* flex-grow: 9; */
+/* flex: 5; */
+flex: 8;
 }
 
 .play-controls{
@@ -165,11 +168,13 @@
 }
 
 .volume-control{
-  width: 10%;
-  display: flex;
-  justify-content: flex-start;
-  background: transparent;
-  align-items: center;
+  width: 10%; */
+    display: flex;
+    justify-content: flex-start;
+    background: transparent;
+    align-items: center;
+    /* flex-grow: 1; */
+    flex: 1;
 }
 
 .volume-bar{
@@ -196,5 +201,7 @@
 }
 
 .current-song-info{
-  padding-left: 13px;
+  /* padding-left: 13px; */
+/* flex-grow: 1; */
+flex: 1;
 }
