--- a/app/assets/stylesheets/main/top/top_right/profile.css
+++ b/app/assets/stylesheets/main/top/top_right/profile.css
@@ -9,6 +9,7 @@
 
 #logout-btn-container{
   width: 40%;
+  padding-right: 5%;
 }
 
 
@@ -19,9 +20,6 @@
 
 #logout-btn-container button{
   position: absolute;
-  font-size: 12px;
-  width: 6%;
-  height: 25px;
   border-radius: 30px;
   border: 2px solid #a9a9a9;
   background-color: transparent;
@@ -29,13 +27,13 @@
   -webkit-transition: width height font-size border-color margin-top 2.3s;
    transition: width height font-size border-color 2.3s;
    outline: none;
+   padding: 6px 25px
 }
 
 #logout-btn-container button:hover{
-  font-size: 12.5px;
+
   cursor: pointer;
-  width: 6.5%;
-  height: 27px;
+  transform: scale(1.1);
   border-color: white;
   margin-top: -5px;
 }
